# Jimm.jl

./: .gitignore  ANNOUNCE.md  CLAUDE.md  LICENSE  NOTICE  Project.toml  README.md  pyproject.toml
.github/workflows/: Documentation.yml
ci/: README.md  pyproject.toml
ci/JimmCI/: Project.toml
ci/JimmCI/src/: Builder.jl  Config.jl  GitHubApp.jl  JimmCI.jl  Jobs.jl  PathFilter.jl  SkipMarker.jl  Tui.jl
ci/JimmCI/test/: runtests.jl  test_jobs.jl  test_path_filter.jl
ci/jimm_ci/: config.py  github_app.py  inspector.py  path_filter.py  runner.py  server.py  skip.py  state.py
ci/systemd/: cloudflared.service  jimm-ci-nightly.service  jimm-ci-nightly.timer  jimm-ci.service
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
dev/getting_started/: index.html
dev/porting/: index.html
dev/testing/: index.html
docs/: Project.toml  make.jl
docs/src/: getting_started.md  index.md  porting.md  testing.md
scripts/: test_variant.sh
src/: Jimm.jl  Luximm.jl
src/Interop/: HFHub.jl  Interop.jl  Parity.jl  SafeTensors.jl
src/Layers/: GRN.jl  Init.jl  LayerNorm2d.jl  Layers.jl  StdConv.jl
src/Models/: Models.jl
test/: _ci_driver.jl  _filter.jl  _parity_helpers.jl  _parity_tol.jl  runtests.jl  test_bit_resnet.jl  test_convnext.jl  test_convnextv2.jl  test_hf_download.jl  test_hf_hub_download.jl  test_init.jl  test_resnet.jl
test/parity/: _dump_common.py  dump_convnext_io.py  dump_convnextv2_io.py  dump_resnet_io.py  (+1 more)
v0.1.0/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
(+30 files in other folders)
