[project]
name = "jimm-ci"
version = "0.1.0"
description = "Self-hosted webhook-driven CI service for Jimm.jl"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
]

[project.scripts]
jimm-ci = "jimm_ci.server:main"
jimm-ci-nightly = "jimm_ci.server:nightly_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jimm_ci"]
