[project]
name = "jimm-ci"
version = "0.1.0"
description = "Manual CLI runner for the self-hosted Jimm.jl CI"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
]

[project.scripts]
jimm-ci-run = "jimm_ci.runner:cli_main"
jimm-ci-pr = "jimm_ci.inspector:cli_main"
jimm-ci-skip = "jimm_ci.skip:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jimm_ci"]
